add socket
