# docs/swagger.yaml
@@ -461,6 +461,74 @@ paths:
       summary: Tạo đơn hàng mới
       tags:
       - Orders
+  /orders/merchant/{merchant_id}:
+    get:
+      description: Hỗ trợ lọc theo status, phân trang
+      parameters:
+      - description: Merchant (Restaurant) ID
+        in: path
+        name: merchant_id
+        required: true
+        type: string
+      - description: 'Số trang (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Số đơn mỗi trang (default: 10)'
+        in: query
+        name: limit
+        type: integer
+      - description: Lọc theo trạng thái
+        in: query
+        name: status
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Lấy danh sách đơn hàng của một merchant (nhà hàng)
+      tags:
+      - Orders
+  /orders/shipper/new:
+    get:
+      description: Lấy các đơn hàng có trạng thái 'RESTAURANT_ACCEPTED' (chờ shipper
+        nhận)
+      parameters:
+      - description: 'Số trang (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Số đơn mỗi trang (default: 10)'
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Lấy danh sách đơn hàng mới cho shipper
+      tags:
+      - Orders
   /orders/user/{user_id}:
     get:
       description: Hỗ trợ lọc theo status, restaurant_id, phân trang
@@ -503,4 +571,12 @@ paths:
       summary: Lấy danh sách đơn hàng của một người dùng
       tags:
       - Orders
+  /ws/orders:
+    get:
+      produces:
+      - application/json
+      responses: {}
+      summary: WebSocket order event stream
+      tags:
+      - WebSocket
 swagger: "2.0"
